@@ -1,4 +1,8 @@
 0.02
+ - Add Map::Tube::GraphViz, Map::Tube::Text::Table, Task::Map::Tube,
+   Map::Tube::Budapest, Map::Tube::Dnipropetrovsk, Map::Tube::Nanjing,
+   Map::Tube::Novosibirsk, Map::Tube::SaintPetersburg, Map::Tube::Vienna
+   and Map::Tube::Yekaterinburg to SEE ALSO section in doc.
  - Add get_lines() method to doc.
  - Add get_stations() method to doc.
  - Remove executable bit from tbilisi-map.xml file.
